[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
crossbeam = { version = "0.8.1", features = ["crossbeam-channel"] }
regex = "1.5.6"
